--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,13 @@
 {
+    "name": "pear/xml_util",
+    "description": "Methods to work with XML documents",
+    "homepage": "http://pear.php.net/package/XML_Util",
+    "license": "BSD-3-Clause",
+    "support": {
+        "issues": "http://pear.php.net/bugs/search.php?cmd=display&package_name[]=XML_Util",
+        "source": "https://github.com/pear/XML_Util"
+    },
+    "type": "library",
     "authors": [
         {
             "email": "ashnazg@php.net",
@@ -21,21 +30,10 @@
             "XML_Util": "./"
         }
     },
-    "description": "More info available on: http://pear.php.net/package/XML_Util",
     "include-path": [
         "./"
     ],
-    "license": "BSD License",
-    "name": "pear/xml_util",
-    "support": {
-        "issues": "http://pear.php.net/bugs/search.php?cmd=display&package_name[]=XML_Util",
-        "source": "https://github.com/pear/XML_Util"
-    },
-    "type": "library",
     "require": {
-        "pear/pear_exception": "*"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "*"
+        "pear/pear-core-minimal": "^1.9.5"
     }
 }
