--- a/package.xml
+++ b/package.xml
@@ -22,48 +22,52 @@
   <email>davey@php.net</email>
   <active>no</active>
  </helper>
- <date>2014-06-07</date>
- <time>19:47:02</time>
+ <date>2015-02-27</date>
+ <time>13:23:02</time>
  <version>
-  <release>1.2.3</release>
-  <api>1.2.0</api>
+  <release>1.3.0</release>
+  <api>1.3.0</api>
  </version>
  <stability>
   <release>stable</release>
   <api>stable</api>
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license">BSD License</license>
+
  <notes>
-Bug #20293	Broken installation for 1.2.2
+* Set minimum PHP version to 5.3.0
+* Mark static methods with static keyword
  </notes>
+
  <contents>
   <dir baseinstalldir="/" name="/">
-   <file baseinstalldir="/" md5sum="af2746028ae4395f549855a5e444ada7" name="examples/example.php" role="doc" />
-   <file baseinstalldir="/" md5sum="b9e52f4aa372c4067c609f49c2285b8f" name="examples/example2.php" role="doc" />
-   <file baseinstalldir="/" md5sum="73088689d58b71cd4f86013c88b72216" name="tests/testBasic_apiVersion.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="4b17c0df7fbfb1bb2f3f636ebd6c2cbd" name="tests/testBasic_attributesToString.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="dc4202f1451bbeb62a5bc7d56a7c774c" name="tests/testBasic_collapseEmptyTags.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="4c87fda94fdfb7a78ba84998d6e28f45" name="tests/testBasic_createCDataSection.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="c101844768f146653c59c81978060158" name="tests/testBasic_createComment.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="ba75d66c2f0fb0010c71f3bcd1f64eb2" name="tests/testBasic_createEndElement.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="ad786fb687e1eea1f6890a7424709c79" name="tests/testBasic_createStartElement.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="5f453edadebaa3435c8e6f09a3aaaa9c" name="tests/testBasic_createTag.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="637fa86b8bcf0086334f69004a435169" name="tests/testBasic_createTagFromArray.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="817882a0ab33e60f17ee71874ad975f0" name="tests/testBasic_getDocTypeDeclaration.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="5bc1926a488a6b63ec6366bfcf06a50a" name="tests/testBasic_getXmlDeclaration.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="a727860d55c14194fdaffa839a59a540" name="tests/testBasic_isValidName.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="300a6192f7cc6f7bc3d8f2576b51e4b0" name="tests/testBasic_raiseError.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="e6717d43001775cccd52bd5195cf02e0" name="tests/testBasic_replaceEntities.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="431856aa83a23396a9f00915dd2be192" name="tests/testBasic_reverseEntities.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="ab035534463cae8cc903e907aead8ffe" name="tests/testBasic_splitQualifiedName.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="1850856692ff6c6df5e8acb16e1080ce" name="tests/testBug_4950.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="b4127883df40a4b0d1736ad42215ee25" name="tests/testBug_5392.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="b133427f8ea9b60c5bec7400cd5e4c7f" name="tests/testBug_18343.phpt" role="test" />
-   <file baseinstalldir="/" md5sum="ae894509114393e5f7f257cadfa87ead" name="XML/Util.php" role="php">
+   <file baseinstalldir="/" name="examples/example.php" role="doc" />
+   <file baseinstalldir="/" name="examples/example2.php" role="doc" />
+   <file baseinstalldir="/" name="tests/testBasic_apiVersion.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBasic_attributesToString.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBasic_collapseEmptyTags.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBasic_createCDataSection.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBasic_createComment.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBasic_createEndElement.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBasic_createStartElement.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBasic_createTag.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBasic_createTagFromArray.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBasic_getDocTypeDeclaration.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBasic_getXmlDeclaration.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBasic_isValidName.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBasic_raiseError.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBasic_replaceEntities.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBasic_reverseEntities.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBasic_splitQualifiedName.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBug_4950.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBug_5392.phpt" role="test" />
+   <file baseinstalldir="/" name="tests/testBug_18343.phpt" role="test" />
+   <file baseinstalldir="/" name="XML/Util.php" role="php">
     <tasks:replace from="@version@" to="version" type="package-info" />
    </file>
   </dir>
  </contents>
+
  <dependencies>
   <required>
    <php>
@@ -77,8 +81,11 @@ Bug #20293	Broken installation for 1.2.2
    </extension>
   </required>
  </dependencies>
+
  <phprelease />
+
  <changelog>
+
   <release>
    <version>
     <release>0.1</release>
@@ -94,6 +101,7 @@ Bug #20293	Broken installation for 1.2.2
 inital release
    </notes>
   </release>
+
   <release>
    <version>
     <release>0.1.1</release>
@@ -109,6 +117,7 @@ inital release
 bugfix: removed bug in createTagFromArray
    </notes>
   </release>
+
   <release>
    <version>
     <release>0.2</release>
@@ -124,6 +133,7 @@ bugfix: removed bug in createTagFromArray
 added XML_Util::getDocTypeDeclaration()
    </notes>
   </release>
+
   <release>
    <version>
     <release>0.2.1</release>
@@ -139,6 +149,7 @@ added XML_Util::getDocTypeDeclaration()
 fixed bug with zero as tag content in createTagFromArray and createTag
    </notes>
   </release>
+
   <release>
    <version>
     <release>0.3</release>
@@ -154,6 +165,7 @@ fixed bug with zero as tag content in createTagFromArray and createTag
 added createStartElement() and createEndElement()
    </notes>
   </release>
+
   <release>
    <version>
     <release>0.4</release>
@@ -172,6 +184,7 @@ fixed bug #23,
 fixed bug in splitQualifiedName()
    </notes>
   </release>
+
   <release>
    <version>
     <release>0.5</release>
@@ -188,6 +201,7 @@ added support for multiline attributes in attributesToString(), createTag*() and
 added createComment
    </notes>
   </release>
+
   <release>
    <version>
     <release>0.5.1</release>
@@ -203,6 +217,7 @@ added createComment
 added default namespace parameter (optional) in splitQualifiedName() (requested by Sebastian Bergmann)
    </notes>
   </release>
+
   <release>
    <version>
     <release>0.5.2</release>
@@ -219,6 +234,7 @@ now creates XHTML compliant empty tags (Davey),
 minor whitespace fixes (Davey)
    </notes>
   </release>
+
   <release>
    <version>
     <release>0.6.0beta1</release>
@@ -238,6 +254,7 @@ minor whitespace fixes (Davey)
 - introduced XML_Util::raiseError() to avoid the necessity of including PEAR.php, will only be included on error
    </notes>
   </release>
+
   <release>
    <version>
     <release>0.6.0</release>
@@ -257,6 +274,7 @@ minor whitespace fixes (Davey)
 - introduced XML_Util::raiseError() to avoid the necessity of including PEAR.php, will only be included on error
    </notes>
   </release>
+
   <release>
    <version>
     <release>0.6.1</release>
@@ -272,6 +290,7 @@ minor whitespace fixes (Davey)
 - Added check for tag name (either as local part or qualified name) in createTagFromArray() (bug #1083)
    </notes>
   </release>
+
   <release>
    <version>
     <release>1.0.0</release>
@@ -287,6 +306,7 @@ minor whitespace fixes (Davey)
 - Added reverseEntities() (request #2639)
    </notes>
   </release>
+
   <release>
    <version>
     <release>1.1.0</release>
@@ -302,6 +322,7 @@ minor whitespace fixes (Davey)
 - Added collapseEmptyTags (patch by Sebastian Bergmann and Thomas Duffey)
    </notes>
   </release>
+
   <release>
    <version>
     <release>1.1.1</release>
@@ -318,6 +339,7 @@ minor whitespace fixes (Davey)
 - createTag() and createTagFromArray() now accept XML_UTIL_ENTITIES_XML, XML_UTIL_ENTITIES_XML_REQUIRED, XML_UTIL_ENTITIES_HTML, XML_UTIL_ENTITIES_NONE and XML_UTIL_CDATA_SECTION as $replaceEntities parameter
    </notes>
   </release>
+
   <release>
    <version>
     <release>1.1.2</release>
@@ -334,6 +356,7 @@ minor whitespace fixes (Davey)
 - implemented request #8196: added optional parameter to influence array sorting to createTag() createTagFromArray() and createStartElement()
    </notes>
   </release>
+
   <release>
    <version>
     <release>1.1.4</release>
@@ -349,6 +372,7 @@ minor whitespace fixes (Davey)
 - Fixed bug #9561: Not allowing underscores in middle of tags
    </notes>
   </release>
+
   <release>
    <version>
     <release>1.2.0a1</release>
@@ -367,6 +391,7 @@ Switch to package.xml v2 [ashnazg]
 Fixed Bug #4950: Incorrect CDATA serializing [ashnazg|ja.doma]
    </notes>
   </release>
+
   <release>
    <version>
     <release>1.2.0a2</release>
@@ -388,6 +413,7 @@ Fixed Bug #4950: Incorrect CDATA serializing [ashnazg|drry]
 -- (this fix differs from the one in v1.2.0a1)
    </notes>
   </release>
+
   <release>
    <version>
     <release>1.2.0RC1</release>
@@ -409,6 +435,7 @@ Fixed Bug #4950: Incorrect CDATA serializing [ashnazg|drry]
 -- (this fix differs from the one in v1.2.0a1)
    </notes>
   </release>
+
   <release>
    <version>
     <release>1.2.0</release>
@@ -430,6 +457,7 @@ Fixed Bug #4950: Incorrect CDATA serializing [ashnazg|drry]
 -- (this fix differs from the one in v1.2.0a1)
    </notes>
   </release>
+
   <release>
    <version>
     <release>1.2.1</release>
@@ -445,6 +473,7 @@ Fixed Bug #4950: Incorrect CDATA serializing [ashnazg|drry]
 Fixed Bug #14760: Bug in getDocTypeDeclaration() [ashnazg|fpospisil]
    </notes>
   </release>
+
   <release>
    <version>
     <release>1.2.2</release>
@@ -464,6 +493,7 @@ Bug #19174	upgrade PHPUnit require statements &amp; other fixes (for PEAR QA Tea
 Request #19750	examples/example.php encoding
    </notes>
   </release>
+
   <release>
    <version>
     <release>1.2.3</release>
@@ -479,5 +509,23 @@ Request #19750	examples/example.php encoding
 Bug #20293	Broken installation for 1.2.2
    </notes>
   </release>
+
+  <release>
+   <version>
+    <release>1.3.0</release>
+    <api>1.3.0</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2015-02-27</date>
+   <license uri="http://opensource.org/licenses/bsd-license">BSD License</license>
+   <notes>
+* Set minimum PHP version to 5.3.0
+* Mark static methods with static keyword
+   </notes>
+  </release>
+
  </changelog>
 </package>
