--- a/package.xml
+++ b/package.xml
@@ -22,11 +22,11 @@
   <email>davey@php.net</email>
   <active>no</active>
  </helper>
- <date>2015-02-27</date>
- <time>13:23:02</time>
+ <date>2017-01-29</date>
+ <time>11:40:00</time>
  <version>
-  <release>1.3.0</release>
-  <api>1.3.0</api>
+  <release>1.4.0</release>
+  <api>1.4.0</api>
  </version>
  <stability>
   <release>stable</release>
@@ -35,8 +35,8 @@
  <license uri="http://opensource.org/licenses/bsd-license">BSD License</license>
 
  <notes>
-* Set minimum PHP version to 5.3.0
-* Mark static methods with static keyword
+* Set minimum PHP version to 5.4.0
+* Set minimum PEAR version to 1.10.1
  </notes>
 
  <contents>
@@ -71,10 +71,10 @@
  <dependencies>
   <required>
    <php>
-    <min>5.3.0</min>
+    <min>5.4.0</min>
    </php>
    <pearinstaller>
-    <min>1.4.3</min>
+    <min>1.10.1</min>
    </pearinstaller>
    <extension>
     <name>pcre</name>
@@ -524,6 +524,23 @@ Bug #20293	Broken installation for 1.2.2
    <notes>
 * Set minimum PHP version to 5.3.0
 * Mark static methods with static keyword
+   </notes>
+  </release>
+
+  <release>
+   <version>
+    <release>1.4.0</release>
+    <api>1.4.0</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2017-01-29</date>
+   <license uri="http://opensource.org/licenses/bsd-license">BSD License</license>
+   <notes>
+* Set minimum PHP version to 5.4.0
+* Set minimum PEAR version to 1.10.1
    </notes>
   </release>
 
