--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,22 @@
 language: php
 sudo: false
-install:
-  - pear install -f package.xml
 php:
-  - 7
-  - 5.6
-  - 5.5
-  - 5.4
   - 5.3
-script: pear run-tests -r tests/
+  - 5.4
+  - 5.5
+  - 5.6
+  - 7.0
+  - 7.1
+script:
+  - pear list
+  - pear channel-update pear.php.net
+  - pear upgrade pear/pear-1.10.1
+  - pear list
+  - pear install package.xml
+  - pear list
+  - pear run-tests --showdiff -r tests
+  - pear package
+  - pear package-validate
+  - pear install --force *.tgz
+  - pear list
+  - composer install
