--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
   - pear channel-update pear.php.net
   - pear upgrade pear/pear-1.10.1
   - pear list
-  - pear install package.xml
+  - pear install --force package.xml
   - pear list
   - pear run-tests --showdiff -r tests
   - pear package
