--- a/package.xml
+++ b/package.xml
@@ -25,7 +25,7 @@
  <date>2017-01-29</date>
  <time>11:40:00</time>
  <version>
-  <release>1.4.0</release>
+  <release>1.4.0a1</release>
   <api>1.4.0</api>
  </version>
  <stability>
@@ -529,7 +529,7 @@ Bug #20293	Broken installation for 1.2.2
 
   <release>
    <version>
-    <release>1.4.0</release>
+    <release>1.4.0a1</release>
     <api>1.4.0</api>
    </version>
    <stability>
