--- a/package.xml
+++ b/package.xml
@@ -29,7 +29,7 @@
   <api>1.4.0</api>
  </version>
  <stability>
-  <release>stable</release>
+  <release>alpha</release>
   <api>stable</api>
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license">BSD License</license>
@@ -533,7 +533,7 @@ Bug #20293	Broken installation for 1.2.2
     <api>1.4.0</api>
    </version>
    <stability>
-    <release>stable</release>
+    <release>alpha</release>
     <api>stable</api>
    </stability>
    <date>2017-01-29</date>
