--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,7 +11,7 @@
 
     <testsuites>
         <testsuite name="Test Suite">
-            <directory suffix=".phpt">tests/</directory>
+            <directory suffix=".php">tests/</directory>
         </testsuite>
     </testsuites>
 
@@ -24,7 +24,6 @@
     <logging>
         <log type="coverage-clover" target="build/logs/clover.xml"/>
         <log type="coverage-html" target="build/coverage/"/>
-        <log type="coverage-text" target="php://stdout"/>
     </logging>
 
 </phpunit>
