--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,6 @@
         "pear/pear-core-minimal": "^1.10.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "<6.0"
+        "phpunit/phpunit": "@stable"
     }
 }
