--- a/package.xml
+++ b/package.xml
@@ -23,13 +23,13 @@
   <active>no</active>
  </helper>
  <date>2017-02-03</date>
- <time>10:20:00</time>
+ <time>12:30:00</time>
  <version>
-  <release>1.4.0a1</release>
+  <release>1.4.0</release>
   <api>1.4.0</api>
  </version>
  <stability>
-  <release>alpha</release>
+  <release>stable</release>
   <api>stable</api>
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license">BSD License</license>
@@ -535,11 +535,11 @@ Bug #20293	Broken installation for 1.2.2
 
   <release>
    <version>
-    <release>1.4.0a1</release>
+    <release>1.4.0</release>
     <api>1.4.0</api>
    </version>
    <stability>
-    <release>alpha</release>
+    <release>stable</release>
     <api>stable</api>
    </stability>
    <date>2017-02-03</date>
