--- a/package.xml
+++ b/package.xml
@@ -22,10 +22,10 @@
   <email>davey@php.net</email>
   <active>no</active>
  </helper>
- <date>2017-02-22</date>
- <time>13:00:00</time>
+ <date>2017-06-28</date>
+ <time>21:20:00</time>
  <version>
-  <release>1.4.2</release>
+  <release>1.4.3</release>
   <api>1.4.0</api>
  </version>
  <stability>
@@ -35,7 +35,7 @@
  <license uri="http://opensource.org/licenses/bsd-license">BSD License</license>
 
  <notes>
-* Bug #21184 Collapse issue
+  * Decrease minimum PEAR version to 1.9.0 to allow PEAR upgrades
  </notes>
 
  <contents>
@@ -76,7 +76,7 @@
     <min>5.4.0</min>
    </php>
    <pearinstaller>
-    <min>1.10.1</min>
+    <min>1.9.0</min>
    </pearinstaller>
    <extension>
     <name>pcre</name>
@@ -580,6 +580,22 @@ Bug #20293	Broken installation for 1.2.2
    <license uri="http://opensource.org/licenses/bsd-license">BSD License</license>
    <notes>
 * Bug #21184 Collapse issue
+   </notes>
+  </release>
+
+  <release>
+   <version>
+    <release>1.4.3</release>
+    <api>1.4.0</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2017-06-28</date>
+   <license uri="http://opensource.org/licenses/bsd-license">BSD License</license>
+   <notes>
+    * Decrease minimum PEAR version to 1.9.0 to allow PEAR upgrades
    </notes>
   </release>
 
