--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ matrix:
   allow_failures:
     - php: nightly
     - php: 7.4snapshot
+    - php: 7.3
+    - php: 7.2
   include:
     - php: 5.5
       dist: trusty
