--- a/package.xml
+++ b/package.xml
@@ -22,10 +22,9 @@
   <email>davey@php.net</email>
   <active>no</active>
  </helper>
- <date>2017-06-28</date>
- <time>21:20:00</time>
+ <date>2019-12-05</date>
  <version>
-  <release>1.4.3</release>
+  <release>1.4.4</release>
   <api>1.4.0</api>
  </version>
  <stability>
@@ -35,7 +34,7 @@
  <license uri="http://opensource.org/licenses/bsd-license">BSD License</license>
 
  <notes>
-  * Decrease minimum PEAR version to 1.9.0 to allow PEAR upgrades
+  * PR #11: fix phplint warning
  </notes>
 
  <contents>
@@ -596,6 +595,22 @@ Bug #20293	Broken installation for 1.2.2
    <license uri="http://opensource.org/licenses/bsd-license">BSD License</license>
    <notes>
     * Decrease minimum PEAR version to 1.9.0 to allow PEAR upgrades
+   </notes>
+  </release>
+
+  <release>
+   <version>
+    <release>1.4.4</release>
+    <api>1.4.0</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2019-12-05</date>
+   <license uri="http://opensource.org/licenses/bsd-license">BSD License</license>
+   <notes>
+    * PR #11: fix phplint warning
    </notes>
   </release>
 
