--- a/composer.json
+++ b/composer.json
@@ -36,5 +36,8 @@
     "require": {
         "php": ">=5.4",
         "pear/pear-core-minimal": "^1.10.1"
+    },
+    "require-dev": {
+	"phpunit/phpunit": "<10"
     }
 }
